tests/fixtures/invalid/round_bool_dict.py
# Cannot call round() with Bool, Dict[str, int]
x = round(True, {"a": 1})
